; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/dccp/extr_output.c_dccp_connect_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/dccp/extr_output.c_dccp_connect_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i64 }
%struct.dccp_sock = type { i32, i32 }
%struct.dst_entry = type { i32 }
%struct.inet_connection_sock = type { i64 }

@SOCK_DONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sock*)* @dccp_connect_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dccp_connect_init(%struct.sock* %0) #0 {
  %2 = alloca %struct.sock*, align 8
  %3 = alloca %struct.dccp_sock*, align 8
  %4 = alloca %struct.dst_entry*, align 8
  %5 = alloca %struct.inet_connection_sock*, align 8
  store %struct.sock* %0, %struct.sock** %2, align 8
  %6 = load %struct.sock*, %struct.sock** %2, align 8
  %7 = call %struct.dccp_sock* @dccp_sk(%struct.sock* %6)
  store %struct.dccp_sock* %7, %struct.dccp_sock** %3, align 8
  %8 = load %struct.sock*, %struct.sock** %2, align 8
  %9 = call %struct.dst_entry* @__sk_dst_get(%struct.sock* %8)
  store %struct.dst_entry* %9, %struct.dst_entry** %4, align 8
  %10 = load %struct.sock*, %struct.sock** %2, align 8
  %11 = call %struct.inet_connection_sock* @inet_csk(%struct.sock* %10)
  store %struct.inet_connection_sock* %11, %struct.inet_connection_sock** %5, align 8
  %12 = load %struct.sock*, %struct.sock** %2, align 8
  %13 = getelementptr inbounds %struct.sock, %struct.sock* %12, i32 0, i32 0
  store i64 0, i64* %13, align 8
  %14 = load %struct.sock*, %struct.sock** %2, align 8
  %15 = load i32, i32* @SOCK_DONE, align 4
  %16 = call i32 @sock_reset_flag(%struct.sock* %14, i32 %15)
  %17 = load %struct.sock*, %struct.sock** %2, align 8
  %18 = load %struct.dst_entry*, %struct.dst_entry** %4, align 8
  %19 = call i32 @dst_mtu(%struct.dst_entry* %18)
  %20 = call i32 @dccp_sync_mss(%struct.sock* %17, i32 %19)
  %21 = load %struct.dccp_sock*, %struct.dccp_sock** %3, align 8
  %22 = getelementptr inbounds %struct.dccp_sock, %struct.dccp_sock* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.dccp_sock*, %struct.dccp_sock** %3, align 8
  %25 = getelementptr inbounds %struct.dccp_sock, %struct.dccp_sock* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 4
  %26 = load %struct.inet_connection_sock*, %struct.inet_connection_sock** %5, align 8
  %27 = getelementptr inbounds %struct.inet_connection_sock, %struct.inet_connection_sock* %26, i32 0, i32 0
  store i64 0, i64* %27, align 8
  ret void
}

declare dso_local %struct.dccp_sock* @dccp_sk(%struct.sock*) #1

declare dso_local %struct.dst_entry* @__sk_dst_get(%struct.sock*) #1

declare dso_local %struct.inet_connection_sock* @inet_csk(%struct.sock*) #1

declare dso_local i32 @sock_reset_flag(%struct.sock*, i32) #1

declare dso_local i32 @dccp_sync_mss(%struct.sock*, i32) #1

declare dso_local i32 @dst_mtu(%struct.dst_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
